--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
     "validator": "^13.7.0"
